# gold-to-neo4j

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  Dockerfile  G2N-PR-body.md  pyproject.toml  requirements.txt  unit_tests.md
config/: customers.yaml  embedding_config.yaml  ingredients.yaml  products.yaml  recipes.yaml
docs/: Agentic_workflow_Diagram.txt  B2B_LAYER_ARCHITECTURE.md  DEPLOY_ORDER.md  Embedding and Indexing Workflow.md  GRAPH_ARCHITECTURE.md  Gold-to-Neo4j_Ingenstion_Pipeline_Workflow.md  Knowledge_Graph_Missing_Structure.md  Knowledge_Graph_Relationships_Missing.md  Neo4j Docker Plugins Setup.md  Neo4j GDS GenAI Installation Coolify.md  ONE_TIME_INSERTION_COST_SUMMARY.md  agentic_validation_layer.md  cost_estimation_embedding.txt  deployment.md  ingestion_overview.md
scripts/: check_semantic_embeddings_status.py  create_vector_indexes.py  debug_ingredient_nutrition.py  drop_all_neo4j_indexes.cypher  entrypoint.sh  initial_setup_graphsage.py  initial_setup_semantic_embeddings.py  reset_embeddings_and_indexes.py  run_layer.sh  sample_embedding_tokens.py
shared/: agent_client.py  embedding_pass.py  embedding_validation.py  logging.py  metrics.py  models.py  neo4j_client.py  retry.py  run_summary.py  schema_validation.py  semantic_embeddings.py  supabase_client.py  upsert.py
sql/: claim_events.sql  outbox_maintenance.sql  outbox_table.sql  phase1_outbox_enhancement.sql  remove_webhook_triggers.sql  triggers.sql  webhooks.sql
state/: customers_state.json  ingredients_state.json  products_state.json  recipes_state.json
tests/: conftest.py  (+3 more)
(+24 files in other folders)
